# ohj2710

./: .cproject  .editorconfig  .gitignore  .project  AndroidManifest.xml  CMakeLists.txt  Makefile  README.md  ant.properties  autobuild.sh  build.xml  github_sendfile.py  ohj2710.sublime-project  peli.sublime-project
assets/: CMakeLists.txt
cmake_modules/: FindOpenGLES.cmake  FindSDL2TTF.cmake
dev/: CMakeLists.txt
dev/src/: CMakeLists.txt  main.cc
jni/: Application.mk
jni/Box2D/: Android.mk
jni/SDL/include/: SDL_config.h
jni/sdl2gfx-code/: Android.mk
jni/src/: Android.mk  Assets.hpp  CMakeLists.txt  DebugDraw.cpp  DebugDraw.hpp  Game.cpp  Game.hpp  Manager.cpp  Manager.hpp  Object.cpp  Object.hpp  Screen.cpp  Screen.hpp  UI.cpp  UI.hpp  World.cpp  World.hpp  build-assets.py  common.hpp  gitversion.h.in  main.cpp  main_android.cpp
jni/src/assets/: asteroid.json  asteroid.xcf  bomb.json
jni/src/assets/bombs/: Explosion.xcf  chain.json  chain.xcf  chainexplosion.json  normal.json  normal.xcf  normalexplosion.json  splash.json  splash.xcf  splashexplosion.json
jni/src/assets/planets/: deathstar.json  deathstar.xcf  earth.json  earth.xcf  jupiter.json  jupiter.xcf  moon.json  moon.xcf
jni/src/interfaces/: Drawable.cpp  Drawable.hpp  Timed.hpp  Touchable.hpp
jni/src/managers/: AsteroidManager.hpp  BombManager.hpp  DrawableManager.cpp  DrawableManager.hpp  HitboxManager.hpp  PlanetManager.hpp  PlayerManager.hpp
jni/src/objects/: Asteroid.cpp  Asteroid.hpp  Bomb.cpp  Bomb.hpp  Drawable.cpp  Drawable.hpp  Hitbox.cpp  Hitbox.hpp  Laser.cpp  Laser.hpp  Planet.cpp  Planet.hpp  Player.cpp  Player.hpp  Sprite.cpp  Sprite.hpp
res/values/: strings.xml
src/org/libsdl/app/: SDLActivity.java
src/org/ohj2710/peli/: PeliActivity.java
